# forecast

./: .gitignore  README.md  config.py  pyproject.toml
notebooks/: 1. eda.ipynb  2.arima_explainability.ipynb
pipelines/: arima_pipeline.py  automl_pipeline.py  time_split.py
pipelines/arima/: eval.py  prediction.py  train.py
pipelines/automl/: eval.py  prediction.py  train.py
pipelines/common/: split_train_test.py
pipelines/experiments/: arima_experiment.yaml  arima_xreg_experiment.yaml  l2l_experiment.yaml  tide_experiment.yaml
pipelines/helpers/: date.py
